# windows_implant_templates

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ImplantTemplates.sln  README.md
docs/: 404.md  _config.yml  archive.md  atom.xml
docs/_data/: toc.yml
docs/_docs/: frameworks.md  goals-and-objectives.md  techniques.md
docs/_includes/: head.html  links.html
docs/_posts/: Analyzis_of_metasploit_implants.md
docs/pages/: index.md
generic/dll/metasploit_dll_gdiplus/: metasploit_dll_gdiplus.rc  metasploit_dll_gdiplus.vcxproj  metasploit_dll_gdiplus.vcxproj.filters  template.c  template.def  template.h
generic/dll/meterpreter_dll_template/: meterpreter_dll_template.vcxproj  meterpreter_dll_template.vcxproj.filters  resource.h  template.c  template.def  template.h  template.rc
generic/exe/: CMakeLists.txt  exe.cpp  exe.h
generic/exe/default_cpp_console_application/: default_cpp_console_application.rc  default_cpp_console_application.vcxproj  resource.h
generic/exe/metasploit_service/: metasploit_service.vcxproj  metasploit_service.vcxproj.filters  service.c
generic/exe/meterpreter_template/: meterpreter_template.vcxproj  meterpreter_template.vcxproj.filters  template.c
x64/exe/: CMakeLists.txt
x64/exe/meterpreter_x64_asm/: meterpreter_x64_asm.vcxproj  meterpreter_x64_asm.vcxproj.filters
x86/: CMakeLists.txt
x86/exe/: CMakeLists.txt  meterpreter_template.s
x86/exe/meterpreter_x86_asm/: meterpreter_template.S  meterpreter_x86_asm.vcxproj  meterpreter_x86_asm.vcxproj.filters
